...
    <string name="generic_internet_issue">Ocorreu um erro com a conexao, verifica se você esta conectado e tente novamente</string>
    <string name="generic_connection_issue">Não foi possível completar a requisiçao, tente novamente mais tarde</string>
    <string name="generic_database_issue">Não foi possível conectar com o banco de dados, tente novamente mais tarde</string>
    <string name="generic_connection_forbidden">Você excedeu o numero maximo de requisiçoes, tente novamente mais tarde</string>

    <!-- ######## MENU ######## -->
    <string name="action_search">Pesquisar</string>
    <string name="action_delete">Deletar</string>
    <string name="action_info">Limite de Requisiçao</string>
    <string name="action_events">Eventos</string>
    <string name="action_tags">Tags</string>
    <string name="action_branches">Branches</string>

    <!-- ######## MAIN ACTIVITY ######## -->
    <string name="main_activity_toolbar">Github - API</string>
    <string name="main_activity_list_empty">Você ainda não fez nenhuma pesquisa, clique no icone acima e faça a sua primeira pesquisa</string>

    <!-- ######## SEARCH ACTIVITY ######## -->
    <string name="search_activity_toolbar">Pesquisar</string>
    <string name="search_activity_button">Pesquisar</string>
    <string name="search_activity_search_edittext">Nome do usuário</string>
    <string name="search_activity_description">Digite o nome do usuário abaixo e clique em pesquisar para buscar as informações públicas sobre ele.</string>
    <string name="search_activity_profile_validation">Campo usuário é obrigatório.</string>
    <string name="search_activity_user_not_found">Usuário nao foi encontrado</string>

    <!-- ######## PROFILE ACTIVITY ######## -->
    <string name="profile_activity_no_repository">Este usuário não tem nenhum repositório público</string>

    <!-- ######## EVENT DETAILS ACTIVITY ######## -->
    <string name="activity_event_details_empty_list">Este evento não tem nenhum item</string>
...
    <string name="commit_details_activity_toolbar">Commits</string>
    <string name="commit_details_activity_description">Descriçao</string>
    <string name="commit_details_activity_list_empty">Este evento não tem nenhum commit</string>

    <!-- ######## EVENTS FRAGMENT ######## -->
    <string name="events_fragment_title">Eventos</string>
    <string name="events_fragment_empty_list">Este repositório não tem nenhum evento</string>

    <!-- ######## BRANCHES FRAGMENT ######## -->
    <string name="branches_fragment_title">Branches</string>
    <string name="branches_fragment_empty_list">Este repositório não tem nenhuma branch</string>

    <!-- ######## TAGS FRAGMENT ######## -->
    <string name="tags_fragment_title">Tags</string>
    <string name="tags_fragment_empty_list">Este repositório não tem nenhuma tag</string>

    <!-- ######## GITHUB RATE LIMIT ACTIVITY ######## -->
    <string name="github_rate_limit_activity_toolbar">Limite de Requisiçao</string>
    <string name="github_rate_limit_activity_core" translatable="false">Core</string>
    <string name="github_rate_limit_activity_search" translatable="false">Search</string>
    <string name="github_rate_limit_activity_graph" translatable="false">Graph</string>
...
